--- a/app/styles/sections/nav.less
+++ b/app/styles/sections/nav.less
@@ -38,7 +38,7 @@
 		display: table;
 		overflow: hidden;
 		width: @site-nav-min-width;
-		position: fixed;
+		position: absolute;
 		.transition(.25s ease-in);
 		padding-left: 22px;
 		z-index: @zindex-navbar;
